Increasing scripted java opts